--- a/ExampleApp/ExampleApp.csproj
+++ b/ExampleApp/ExampleApp.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BlazorFlow\BlazorFlow.csproj" />
+    <ProjectReference Include="..\BlazorExecutionFlow\BlazorExecutionFlow.csproj" />
   </ItemGroup>
 
 </Project>
