--- a/BlazorExecutionFlow/BlazorExecutionFlow.csproj
+++ b/BlazorExecutionFlow/BlazorExecutionFlow.csproj
@@ -7,7 +7,7 @@
 
     <!-- NuGet Package Metadata -->
     <PackageId>BlazorExecutionFlow</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <Authors>Roni</Authors>
     <Company>BlazorExecutionFlow</Company>
     <Product>BlazorExecutionFlow</Product>
@@ -22,8 +22,7 @@
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
 
     <!-- Make sure static web assets are included -->
-    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-    <StaticWebAssetBasePath>_content/BlazorFlow</StaticWebAssetBasePath>
+    <StaticWebAssetBasePath>_content/BlazorExecutionFlow</StaticWebAssetBasePath>
   </PropertyGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
